--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+enumflags2 = "0.7.0-preview1"
+
 [target.'cfg(unix)'.dependencies.libc]
 version = "0.2"
 default-features = false
