--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ enumflags2 = "0.7.0-preview1"
 [target.'cfg(unix)'.dependencies.libc]
 version = "0.2"
 default-features = false
+
+[target.'cfg(windows)'.dependencies.winapi]
+version = "0.3"
+features = ["memoryapi", "sysinfoapi"]
