--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,4 @@ default-features = false
 
 [target.'cfg(windows)'.dependencies.winapi]
 version = "0.3"
-features = ["memoryapi", "sysinfoapi"]
+features = ["memoryapi", "sysinfoapi", "errhandlingapi", "winerror"]
